<resources>
    <string name="app_name">ProjectSpotifyStreamer</string>
    <string name="action_settings">Settings</string>

    <!-- Search Main Activity-->
    <string name="artist_search_pic_desc">Artist Picture</string>
    <string name="artist_search_name">Artist Name</string>
    <string name="search_edittext_hint">Search artist here</string>
    <string name="title_activity_top10tracks">Top10tracks</string>
    <string name="search_button_content_description">Search Button</string>

    <!-- Top 10 Tracks Activity-->
    <string name="track_name">Track Name</string>
    <string name="album_nuame">Album name</string>
    <string name="title_activity_play_music">PlayMusicActivity</string>

    <!-- Play Music Activity & Fragment-->
    <string name="artist_name">Artist Name</string>
    <string name="album_name">Album Namse</string>
    <string name="music_album_image">Image placehodler</string>
    <string name="music_previous">Music Previous</string>
    <string name="music_play">Music Play</string>
    <string name="music_next">Music Next</string>

</resources>
