<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/artist_name"
        android:id="@+id/musicArtistName"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:text="@string/album_nuame"
        android:id="@+id/musicAlbumName"
        />

    <ImageView
        android:src="@drawable/udacity"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/music_album_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/musicTrackImage"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/track_name"
        android:id="@+id/musicTrackName"
        />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/play_bar_padding_top_bot"
        android:paddingBottom="@dimen/play_bar_padding_top_bot"
        android:paddingStart="@dimen/play_bar_padding_start_end"
        android:paddingEnd="@dimen/play_bar_padding_start_end"
        android:id="@+id/playBar"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_skip_previous_black_48dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/music_previous"
            android:id="@+id/previousTrackBtn"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_play_circle_fill_black_48dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/music_play"
            android:id="@+id/playTrackBtn"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_skip_next_black_48dp"
            android:contentDescription="@string/music_next"
            android:id="@+id/nextTrackBtn"
            />

    </LinearLayout>
</LinearLayout>
